--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-check-box": "^2.1.7",
-    "react-native-gesture-handler": "^2.13.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^8.1.0",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-svg": "^13.14.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-svg": "13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
